--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react-dom": "^18.2.0",
     "react-loaders": "^3.0.1",
     "react-scripts": "5.0.1",
-    "sass": "^1.57.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.8.1"
+    "prettier": "2.8.1",
+    "sass": "^1.57.1"
   }
 }
