--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "phone-tracker-app",
   "homepage": ".",
+  "name": "phone-tracker-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,8 +13,10 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-loaders": "^3.0.1",
-    "react-router-dom": "^6.8.0",
+    "react-router-dom": "^6.8.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
