--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.8.1",
     "react-router-hash-link": "^2.4.3",
+    "react-router-loading": "^1.0.0",
     "react-scripts": "5.0.1",
     "serve": "^14.2.0",
     "web-vitals": "^2.1.4"
