--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-router-loading": "^1.0.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "serve": "^14.2.0",
     "web-vitals": "^2.1.4"
   },
