--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://github.com/me33awy/phone-tracker-app",
   "name": "phone-tracker-app",
   "version": "0.1.0",
   "private": true,
